"Refactor repository: change data structure from ArrayList to HashMap for improved lookup performance"